--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "typescript.suggest.enabled": false,
-    "prettier.singleQuote": true
+    "prettier.singleQuote": true,
+    "editor.tabSize": 2
 }
